--- a/app/src/main/res/layout/line_category.xml
+++ b/app/src/main/res/layout/line_category.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="8">
         <TextView
-            android:id="@+id/txtCategory"
+            android:id="@+id/tvCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
