update bottom nav

--- a/app/src/main/res/layout/tmp.xml
+++ b/app/src/main/res/layout/tmp.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.HomeActivity">
+    tools:context=".activity.MainActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerlayout"
@@ -23,16 +23,14 @@
                 android:background="#B6B3B3"
                 android:backgroundTint="#5E84A6"
                 app:title="Home"
-                app:titleTextColor="@color/login_bk_color"
-                >
+                app:titleTextColor="@color/login_bk_color">
 
             </androidx.appcompat.widget.Toolbar>
 
             <ViewFlipper
                 android:id="@+id/viewlipper"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
-            </ViewFlipper>
+                android:layout_height="200dp"></ViewFlipper>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,9 +46,8 @@
                     android:text="@string/tvDSSP"
                     android:textColor="#982C2C"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    >
-                </TextView>
+                    android:textStyle="bold"></TextView>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
@@ -59,24 +56,24 @@
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
         </LinearLayout>
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start">
+
             <ListView
                 android:id="@+id/listViewHome"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="wrap_content"></ListView>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nguyễn Văn Nhất\nMobile Developer\n 3/2022"
-                android:textColor="#26852A"
-                />
+                android:textColor="#26852A" />
         </com.google.android.material.navigation.NavigationView>
 
-        <include layout="@layout/bottom_nav_menu" />
     </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
