--- a/app/src/main/res/layout/line_product.xml
+++ b/app/src/main/res/layout/line_product.xml
@@ -16,18 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="top|right"
-                android:src="@drawable/hot_product" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="top|right"
+                    android:src="@drawable/hot_product" />
 
                 <ImageView
                     android:id="@+id/imgProduct"
@@ -41,7 +41,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:gravity="center"
-                    android:textColor="Tên sản phẩm"
+                    android:text="Tên sản phẩm"
+                    android:textColor="#854B4B"
                     android:textSize="20sp" />
 
                 <TextView
@@ -50,7 +51,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="17sp"
                     android:gravity="center"
-                    android:textColor="Giá sản phẩm"
+                    android:text="Giá sản phẩm"
+                    android:textColor="#854B4B"
                     android:textSize="20sp" />
 
             </LinearLayout>
