--- a/app/src/main/res/layout/line_product.xml
+++ b/app/src/main/res/layout/line_product.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="190dp"
+    android:layout_height="256dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
 
 
@@ -24,8 +25,8 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="top|right"
                     android:src="@drawable/hot_product" />
 
@@ -49,7 +50,7 @@
                     android:id="@+id/tvpriceproduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="17sp"
+                    android:layout_margin="2sp"
                     android:gravity="center"
                     android:text="Giá sản phẩm"
                     android:textColor="#854B4B"
