--- a/app/src/main/res/layout/line_product.xml
+++ b/app/src/main/res/layout/line_product.xml
@@ -1,64 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="190dp"
-    android:layout_height="256dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_margin="3dp"
+        app:cardBackgroundColor="@color/whiteTextColor"
         app:cardCornerRadius="5dp">
 
-
-        <FrameLayout
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/img_itemview"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY" />
+
             <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_width="match_parent"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="top|right"
-                    android:src="@drawable/hot_product" />
-
-                <ImageView
-                    android:id="@+id/imgProduct"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="5dp" />
-
                 <TextView
-                    android:id="@+id/tvnameproduct"
+                    android:id="@+id/tv_itemname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:gravity="center"
-                    android:text="Tên sản phẩm"
-                    android:textColor="#854B4B"
-                    android:textSize="20sp" />
+                    android:text="Name Item Category"
+                    android:textSize="18dp"
+                    android:textStyle="bold"></TextView>
 
                 <TextView
-                    android:id="@+id/tvpriceproduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2sp"
-                    android:gravity="center"
-                    android:text="Giá sản phẩm"
-                    android:textColor="#854B4B"
-                    android:textSize="20sp" />
+                    android:id="@+id/tv_itemprice"
+                    android:text="Price item category"
+                    android:textSize="18dp"
+                    android:layout_margin="5dp"></TextView>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_itemdetail"
+                    android:layout_margin="5dp"
+                    android:text="Detail item category"
+                    android:textSize="18dp"></TextView>
             </LinearLayout>
-        </FrameLayout>
-
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
