--- a/app/src/main/res/layout/line_producthome.xml
+++ b/app/src/main/res/layout/line_producthome.xml
@@ -19,44 +19,71 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="top|right"
-                    android:src="@drawable/hot_product" />
-
-                <ImageView
-                    android:id="@+id/imgProduct"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="5dp" />
-
-                <TextView
-                    android:id="@+id/tvnameproduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Tên sản phẩm"
-                    android:textColor="#854B4B"
-                    android:textSize="20sp" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tvpriceproduct"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|right"
+                        android:src="@drawable/hot_product" />
+
+                    <ImageView
+                        android:id="@+id/imgProduct"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="5dp" />
+
+                    <TextView
+                        android:id="@+id/tvnameproduct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Tên sản phẩm"
+                        android:textColor="#854B4B"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2sp"
+                    android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:text="Giá sản phẩm"
-                    android:textColor="#854B4B"
-                    android:textSize="20sp" />
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/tvpriceproduct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2sp"
+                        android:gravity="center"
+                        android:text="Giá sản phẩm"
+                        android:textColor="#854B4B"
+                        android:textSize="18sp" />
+
+                    <Button
+                        android:layout_width="50sp"
+                        android:layout_height="35sp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2sp"
+                        android:background="#A8DC71"
+                        android:text="+"
+                        android:textColor="@color/whiteTextColor"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
             </LinearLayout>
+
+
         </FrameLayout>
 
     </androidx.cardview.widget.CardView>
