--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp"
     tools:context=".activity.ProductDetailActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -15,62 +17,83 @@
     <ImageView
         android:id="@+id/image_productdetail"
         android:layout_width="match_parent"
-        android:layout_height="250sp" />
-
-    <TextView
-        android:id="@+id/tv_nameproductdetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tên sản phẩm"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Số lượng tồn"
-        android:textSize="20sp" />
+        android:layout_height="200sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_nameproductdetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tên sản phẩm"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Số lượng tồn"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ic_heart"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_heart2" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvpriceproduct"
+            android:id="@+id/tv_priceproduct"
             android:layout_width="wrap_content"
             android:layout_height="30sp"
-            android:layout_margin="2sp"
             android:layout_weight="1"
             android:gravity="left"
             android:text="Giá sản phẩm"
             android:textColor="#854B4B"
             android:textSize="18sp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_heart1" />
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/roundbutton"
+            android:gravity="center"
+            android:text="Thêm vào giỏ hàng"
+            android:textColor="@color/whiteTextColor" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
             android:text="Thông tin chi tiết"
             android:textColor="@color/colorAccent"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -81,14 +104,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
-                android:textSize="20dp" />
+                android:textSize="15dp" />
         </ScrollView>
+
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        />
 
 </LinearLayout>
