--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,19 @@
     <color name="login_bk_color">#fff</color>
     <color name="whiteTextColor">#fff</color>
     <color name="primaryTextColor">#1877f2</color>
-
+    <color name="colorYellow">#f1b814</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreen">#3CEF37</color>
+    <color name="colorGrey">#575555</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF5353</color>
+    <color name="purple_700">#FF5353</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="gray">#393d40</color>
+    <color name="darkGray">#27282c</color>
+    <color name="mediumGray">#262523</color>
+    <color name="deep">#2F2B64</color>
 </resources>
