--- a/app/src/main/res/layout/line_producthome.xml
+++ b/app/src/main/res/layout/line_producthome.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="190dp"
     android:layout_height="256dp"
+    android:id="@+id/layouthome"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
