--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".activity.CartFragment">
+    tools:context=".activity.CartActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarcart"
@@ -36,7 +36,9 @@
             <ListView
                 android:id="@+id/listviewcart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
+                android:layout_height="match_parent">
+
+            </ListView>
         </FrameLayout>
     </LinearLayout>
 
