--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right|center"
-                android:text="5000000000000 VNĐ"
+                android:text="0"
                 android:textColor="#3949AB"
                 android:textSize="25dp" />
         </LinearLayout>
@@ -79,7 +79,8 @@
 
     <Button
         android:id="@+id/btnThanhToan"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Thanh toán giỏ hàng"
@@ -88,7 +89,8 @@
 
     <Button
         android:id="@+id/btnTTMuaHang"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Tiếp tục mua hàng"
