--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingLeft="10sp"
     android:paddingRight="10sp"
@@ -12,7 +13,10 @@
         android:id="@+id/toolbar_productdetail"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:backgroundTint="@color/colorAccent"></androidx.appcompat.widget.Toolbar>
+        android:backgroundTint="@color/colorAccent"
+        app:title="Thông tin chi tiết">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
         android:id="@+id/image_productdetail"
