--- a/app/src/main/res/drawable/border_design.xml
+++ b/app/src/main/res/drawable/border_design.xml
@@ -7,5 +7,5 @@
         android:topRightRadius="0dp" />
     <stroke
         android:width="2dp"
-        android:color="@android:color/white" />
+        android:color="#CFCCCC" />
 </shape>
